--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,8 @@
         android:src="@drawable/column_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvDate" />
+        app:layout_constraintTop_toBottomOf="@+id/rvDate"
+        android:contentDescription="@string/sleep_container"/>
 
 
     <TextView
@@ -102,13 +103,15 @@
         app:layout_constraintVertical_bias="0.692" />
 
     <ImageView
+        android:id="@+id/imageView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:src="@drawable/horse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        android:contentDescription="@string/horse_image"/>
 
     <TextView
         android:id="@+id/tvSleepScore"
